Now requires pygame 1.5
Renamed timing_func() to time_func()
EPhysGUI saves absolute time a trial was started (to recontruct all stimuli)
Allow use of pygame Surfaces as source of texture data
Mipmaps of sphere-mapped sinusoidal grating to prevent spatial aliasing
De-emphasis on Presentation and Controller classes
Changed orientations such that 0 degrees is right and 90 degrees is up.
Allow conversion of 3D vertices into 2D screen coordinates
Added wireframe azimuth/elevation grid with text labels
Allow arbitrary orientation of textures and text with angle parameter
FrameTimer class now available for use in your own main loops
Use Python 2.3 logging module (copy included for use with Python 2.2)
No installation of demos or documentation (get source or demo package)
Many small enhancements and bugfixes

New tests:
high-voltage regulation test for displays (Brainard et al., 2002)
incomplete DC restoration test for displays (Brainard et al., 2002)
unit-test suite: among many other things, pixel accuracy of textures

New demos:
convert3d_to_2d.py converts 3D positions to 2D positions
dots_simple_loop.py uses own loop rather than Presentation class
makeMovie2.py makes a movie with get_framebuffer_as_image() function
mouse_gabor_2d.py shows a gabor wavelet under mouse and keyboard control
mouse_gabor_perspective.py is sphereGratingWindowed.py improved and renamed
mouseTarget_user_loop.py uses own loop rather than Presentation class
multi_stim.py shows many stimuli at once

Changes for 0.9.4:
------------------
Major features:
Complete electrophysiology application (see below)
Luminance and color calibration possible
Constant visual angle (perspective-distorted) grating stimulus added
Constant visual angle (perspective-distorted) gaussian and circular windows added
3D texture-mapped sphere stimulus added
Random dot stimulus added
Texture module re-written for ease-of-use, clarity, and support of dynamic texture updating
Color grating stimulus added